This fix seems to allow tooltip AND scroll on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,3 +165,8 @@ a {
 .flex-center-justify {
   justify-content: center;
 }
+
+/* other */
+[mattooltip] {
+  touch-action: auto !important;
+}
